# rvs_laboratories_13

./: .gitignore  CMakeLists.txt  README.md
appendix/: report.tex  Задание.docx
dataset_generator/: dataset_generator.cpp
rvs_laboratories_13/: rvs_laboratories_13.cu
